--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <main>
     <div class="card">
 
-      <img src="/assets/images/image-omelette.jpeg" alt="recipe photo" class="recipe-photo">
+      <img src="./assets/images/image-omelette.jpeg" alt="recipe photo" class="recipe-photo">
 
       <div class="intro">
         <h2 class="name">Simple Omelette Recipe</h2>
